@@ -21,3 +21,6 @@ ADD_LIBRARY(${BASE_LIB_NAME} SHARED ${SRCS})
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
 
 #TARGET_LINK_LIBRARIES(${BASE_LIB_NAME})
+
+install(TARGETS ${BASE_LIB_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(FILES ${SRCS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}/${BASE_LIB_NAME}  )
