@@ -21,6 +21,6 @@ SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
 
 TARGET_LINK_LIBRARIES(${INFERENCE_LIB_NAME} base)
 
-
-
+install(TARGETS ${INFERENCE_LIB_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(FILES ${SRCS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}/${INFERENCE_LIB_NAME}  )
 
