@@ -20,3 +20,6 @@ ADD_LIBRARY(${TRAINING_LIB_NAME} SHARED ${SRCS})
 SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/libs)
 
 TARGET_LINK_LIBRARIES(${TRAINING_LIB_NAME} base lbfgs)
+
+install(TARGETS ${TRAINING_LIB_NAME} DESTINATION ${CMAKE_INSTALL_PREFIX}/lib)
+install(FILES ${SRCS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include/${PROJECT_NAME}/${TRAINING_LIB_NAME} )
